<resources>
    <string name="app_name">Medical Reminder</string>
    <string name="facebook_app_id">3270591816599957</string>
    <string name="fb_login_protocol_scheme">fb3270591816599957</string>

    <string name="booki">BookI</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="read_it_together">Read it together</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="another_sign_up">Or sign up with</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember Me</string>
    <string name="password_error">Password can not be empty</string>
    <string name="email_error">" Email can not be empty"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User name</string>
    <string name="user_name_error">User name can not be empty</string>
    <string name="user_name_error_length"> User name must be 6 characters or more</string>
    <string name="profile_name">Profile Name</string>
    <string name="patients">Patients</string>
    <string name="friends">Friends</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_logout">Logout</string>
    <string name="profile_email">Email</string>
    <string name="accounts">Accounts</string>
    <string name="add_new_account">Add Account</string>
    <string name="try_sign_with_google">You are trying to sign with google</string>
    <string name="password_length_error">Password can not be less than 8 characters</string>
    <string name="enter_friend_mail">enter email of your friend to invite him</string>
    <string name="invite_friend">Invite friend to take care of you</string>
    <string name="send_invitation">Send invitation</string>
    <string name="email_badFormat">This is not valid email</string>
    <string name="email_not_found">This email is not registered or can not accept your request now</string>
    <string name="reserved_healthTaker">This health taker is unavailable now, He might take care of another person</string>
    <string name="request_health_taker_message"> send you request to access his list of medicine and Take care of him \n So what is your answer??</string>
    <string name="added_done">Success adding health taker</string>
    <string name="request_sent">Waiting to his acceptance</string>
    <string name="medicineTxtView" />
    <string name="takenTime" />
    <string name="datetxtview" />
    <string name="medicineRecyclerView" />
    <string name="nestedscrool" />
    <string name="reminders">Reminders</string>
    <string name="suspend">suspend</string>
    <string name="refill">refill</string>
    <string name="PrescriptionRefill">Prescription Refill</string>
    <string name="PillsLeft">"Pills Left: "</string>
    <string name="remindToRefill">"Remind Me to Refill When I Have: "</string>
    <string name="HowToUse">How to use</string>
    <string name="addDose">add dose</string>
    <string name="med_name">Medication Name</string>
    <string name="reminder_times">Reminder Times</string>
    <string name="set_time">Set Time</string>
    <string name="set_strength">Set Strength</string>
    <string name="Instructions">Instructions</string>
    <string name="before_eating">Before Eating</string>
    <string name="while_ating">While Eating</string>
    <string name="after_eating">After Eating</string>
    <string name="doesnt_matter">Doesn\'t Matter</string>
    <string name="prescription_refill">Prescription Refill</string>
    <string name="enter_amount">Enter the amount of meds you have now</string>
    <string name="amount_of_meds">amount of meds</string>
    <string name="get_refill_reminder">"You want to get a refill reminder when you have remaining: "</string>
    <string name="meds_remaining">meds remaining to get a reminder</string>
    <string name="med_icon">Med Icon</string>
    <!--    <string name="done">Done</string>-->
    <string name="txt">haaaaaaaaaaa</string>
    <string name="waiting_google">Connecting with google...</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="warning_health">Be careful, if you ignore this message\n You will not be able to receive any other requests until make choice</string>


    <string-array name="doseStrength">
        <item>g</item>
        <item>IU</item>
        <item>mcg</item>
        <item>mEq</item>
        <item>mg</item>
    </string-array>

    <string-array name="medForm">
        <item>Pill</item>
        <item>Injection</item>
        <item>Drops</item>
        <item>Powder</item>
        <item>Other</item>

    </string-array>


    <string name="refill_error">Remaining medicinine can not be empty</string>
    <string name="amount_error">Medicinine amount can not be empty</string>
    <string name="name_error">" Medicine Name can not be empty"</string>


    <string name="pick_time_for_dose">"Enter your dose number "</string>
    <string name="remind_refill_at">Remind me to refill at </string>
    <string name="refilll" />
    <string name="re">Refill</string>
    <string name="ok">Skip</string>
    <string name="btnok">Skip</string>
    <string name="btnRefill">Refill</string>
    <string name="done">Done</string>

    <string name="date_error">End date must come after start date</string>
    <string name="refill_and_amount_error">Refill Limit Can\'t Be More Than Tha Actual Medicine Amount</string>

    <string-array name="reminder_times">
        <item>Once Daily</item>
        <item>Twice Daily</item>
        <item>3 times Daily</item>
    </string-array>


</resources>